# amazon-codeguru-jupyterlab-extension

./: .gitignore  CONTRIBUTING.md  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: apisec-scan.yml  codeql.yml  test.yml
amazon_codeguru_jupyterlab_extension/: __init__.py  cfg.py  codeguru.py  constants.py  diagnostics.py  parseNotebookIntoScript.py  plugin.py
binder/: environment.yml  postBuild
configuration/boto/codeguru-security/2018-05-10/: service-2.json
schema/: plugin.json
src/: index.ts
src/components/: About.tsx  CodeScanButton.tsx  CodeScanErrorPopup.tsx  CodeScanStatus.tsx
src/constants/: icons.ts  index.ts  interface.ts  policy.ts  region.ts
src/utils/: index.ts
style/: base.css  index.js
tests/: conftest.py  test_diagnostics.py  test_plugin.py
tests/fixtures/: converted.py  finding.json  simple.ipynb
ui-tests/: package.json
ui-tests/tests/: amazon_codeguru_jupyterlab_extension.spec.ts
