[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab>=3.4.7,<4.0.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "amazon_codeguru_jupyterlab_extension"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyterlab_lsp >= 4.0.0",
    "python-lsp-server <= 1.7.1",
    "boto3 >= 1.26.162"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.entry-points.pylsp]
amazon_codeguru_jupyterlab_extension = "amazon_codeguru_jupyterlab_extension.plugin"

[project.optional-dependencies]
dev = ["build", "twine", "hatch"]
tests = ["coverage", "pytest"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["amazon_codeguru_jupyterlab_extension/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"amazon_codeguru_jupyterlab_extension/labextension" = "share/jupyter/labextensions/@aws/amazon-codeguru-extension"
"install.json" = "share/jupyter/labextensions/@aws/amazon-codeguru-extension/install.json"

[tool.hatch.build.hooks.version]
path = "amazon_codeguru_jupyterlab_extension/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "amazon_codeguru_jupyterlab_extension/labextension/static/style.js",
    "amazon_codeguru_jupyterlab_extension/labextension/package.json",
]
skip-if-exists = ["amazon_codeguru_jupyterlab_extension/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "amazon_codeguru_jupyterlab_extension/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = ["python -m pip install jupyterlab~=3.1", "jlpm", "jlpm build:prod"]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
